--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -12,13 +12,13 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Flython
+    - name: Set up python
       uses: actions/setup-python@v3git add .
       with:
         python-version: "3.11"
 
     - name: Install dependencies
-      run: pip install pytest
+      run: pip install pytest pytest-cov
        
     - name: Run unit tests
       run: pytest --cov=your_module --cov-fail-under=90
