--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up python
-      uses: actions/setup-python@v3git
+      uses: actions/setup-python@v3
       with:
         python-version: "3.11"
 
